# trino-querylog-rs

./: .gitignore  Cargo.toml  Dockerfile  build.gradle.kts  justfile  readme.md
etc/: event-listener.properties  log.properties
src/: lib.rs
src/main/kotlin/com/github/trino/querylog/: QueryLogPlugin.kt
src/main/resources/: logback.xml
