[package]
name = "trino-querylog-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.0"                                                         # Use the latest version of the JNI crate
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
