[package]
name = "trino-querylog-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.6"
jni = "0.21.0"                                                                 # Use the latest version of the JNI crate
properties = "0.1.1"
serde = { version = "1.0.192", features = ["derive"] }
serde-java-properties = "0.1.1"
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

rdkafka = { version = "0.36", features = ["cmake-build"] }
futures = "0.3"
tokio = { version = "1.34.0", features = ["full"] }
